--- a/.github/workflows/streak.yml
+++ b/.github/workflows/streak.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Make empty commit
         run: |
-          git config user.name "Arjun Dixit"
-          git config user.email "your-email@example.com"
+          git config user.name "Arjundixit18"
+          git config user.email "dixitarjun249@gmail.com"
           git commit --allow-empty -m "🕒 Daily GitHub streak keeper"
           git push
