--- a/.github/workflows/streak.yml
+++ b/.github/workflows/streak.yml
@@ -1,10 +1,12 @@
 name: Daily GitHub Streak Commit
 
-
 on:
   schedule:
     - cron: '0 5 * * *'  # Every day at 10:30 AM IST
   workflow_dispatch:
+
+permissions:
+  contents: write  # ✅ Needed to allow pushes
 
 jobs:
   keep-streak-alive:
