--- a/.github/workflows/streak.yml
+++ b/.github/workflows/streak.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write  # ✅ Needed to allow pushes
+  contents: write
 
 jobs:
   keep-streak-alive:
@@ -34,5 +34,5 @@ jobs:
           git add last_commit.txt
           git commit -m "📅 Update last_commit.txt - $(date +'%Y-%m-%d')" || echo "No changes to commit"
           git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}
-          git pull origin main --rebase   # ✅ Fetch latest commits first
+          git pull origin main --rebase
           git push origin HEAD:main
