--- a/.github/workflows/streak.yml
+++ b/.github/workflows/streak.yml
@@ -20,8 +20,8 @@ jobs:
 
       - name: Configure Git
         run: |
-          git config user.name "Arjun Dixit"
-          git config user.email "iarjundixit18@gmail.com"
+          git config --global user.name "Arjun Dixit"
+          git config --global user.email "iarjundixit18@gmail.com"
 
       - name: Update last_commit.txt with today's date
         run: |
@@ -32,12 +32,6 @@ jobs:
           TOKEN: ${{ secrets.PAT_STREAK_KEEPER }}
         run: |
           git add last_commit.txt
-          git add last_commit.txt
           git commit -m "📅 Update last_commit.txt - $(date +'%Y-%m-%d')" || echo "No changes to commit"
           git remote set-url origin https://x-access-token:${TOKEN}@github.com/${{ github.repository }}
-          
-          
-          # Always pull but prefer local changes
-          git fetch origin main
-          git reset --soft origin/main
           git push origin HEAD:main
